--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>webdevelopment</title>
 </head>
 <body>
-    <h1>heading</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-    <p>ayesha malik</p>
+    <h1>Main Heading</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, ullam amet enim dignissimos eum dolor! Expedita unde cupiditate earum ipsa corporis, ut culpa eius reprehenderit blanditiis vel eligendi dolore fuga.</p>
+   <h2>Sub Heading</h2>
+   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate impedit repudiandae minima delectus labore? Id assumenda unde, fuga eos dicta repellendus maxime deleniti voluptates sit voluptatibus eveniet at temporibus dignissimos?</p>
+<h2> Another sub heading</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     
 </body>
 </html>
